ANTACROSS-72 updated across version to 6.0